k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: projektagile
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: projektagile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: projektagile-backend:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
