k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: projektagile
spec:
  selector:
    app: frontend
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: projektagile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: projektagile-frontend:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
